--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
       <ion-buttons slot="start">
-          <ion-menu-button></ion-menu-button>
+          <ion-menu-button color="dark"></ion-menu-button>
       </ion-buttons>
-      <ion-title>
+      <ion-title color="tertiary">
           {{title}}
       </ion-title>
   </ion-toolbar>
