--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -29,6 +29,6 @@
     --background: #2c2b25;
     --color:#eee1df;
     --border-style:solid;
-    --border-width :2px;
-    --border-color:#22ff7e;
+    --border-width :1px;
+    --border-color:#97a19b;
 }
