added custom middleware for django sessions on mobile applications

--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -25,7 +25,7 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-.my-custom-class{
+.toaster-class{
     --background: #2c2b25;
     --color:#eee1df;
     --border-style:solid;
