--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -117,3 +117,8 @@ ion-menu ion-content {
   ion-item.selected {
     --color: var(--ion-color-primary);
   }
+
+.header-title {
+  font-size: 2.0rem;
+  font-weight: bold;
+}
