--- a/frontend/src/app/views/tabs/tab1/tab1.page.html
+++ b/frontend/src/app/views/tabs/tab1/tab1.page.html
@@ -14,33 +14,39 @@
   <ion-card *ngFor="let item of todoList; let i = index" class="ion-margin">
     <ion-card-header>
       
-      <ion-card-subtitle [style.color]="item.value.itemPriority === 'high' ? 'red' : (item.value.itemPriority === 'low' ? 'green' : 'orange')">
-        {{item.value.itemCategory}}
+      <ion-card-subtitle [style.color]="item.fields.priority === 'high' ? 'red' : (item.fields.itemPriority === 'low' ? 'green' : 'orange')">
+        {{item.fields.category}}
       </ion-card-subtitle>
 
       <ion-item>
-        <ion-icon *ngIf="item.value.itemPriority === 'high'" color="danger" size="small" name="ellipse"></ion-icon>
-        <ion-icon *ngIf="item.value.itemPriority === 'low'" color="success" size="small" name="ellipse"></ion-icon>
-        <ion-icon *ngIf="item.value.itemPriority === 'middle'" color="warning" size="small" name="ellipse"></ion-icon>
-        <ion-label> {{ item.value.itemName}}</ion-label>
+        <ion-icon *ngIf="item.fields.priority === 'high'" color="danger" size="small" name="ellipse"></ion-icon>
+        <ion-icon *ngIf="item.fields.priority === 'low'" color="success" size="small" name="ellipse"></ion-icon>
+        <ion-icon *ngIf="item.fields.priority === 'middle'" color="warning" size="small" name="ellipse"></ion-icon>
+        <ion-label [style.text-decoration]="item.fields.done ? 'line-through' : 'none'"> &nbsp;{{ item.fields.name}}</ion-label>
+        <ion-checkbox color="primary" (ionChange)="complete_task($event, item.pk, i)" [checked]="item.fields.done"></ion-checkbox>
       </ion-item>
 
     </ion-card-header>
 
     <ion-card-content>
-      <ion-label>Due {{item.value.itemDueDate | date:'fullDate'}}</ion-label>
+      <ion-label>Due {{item.fields.due_date | date:'fullDate'}}</ion-label>
     </ion-card-content>
 
     <ion-row>
     
       <ion-item button (click)="update(item)">
         <ion-icon name="create-outline"></ion-icon>
-        <p>Update</p>
+        <p class="custom-margin">Update</p>
       </ion-item>
 
       <ion-item button (click)="delete(item.key)">
         <ion-icon name="trash-outline"></ion-icon>
-        <p>Cancel</p>
+        <p class="custom-margin">Cancel</p>
+      </ion-item>
+
+      <ion-item button (click)="starred(item.key)">
+        <ion-icon name="star"></ion-icon>
+        <p class="custom-margin">Bookmark</p>
       </ion-item>
     </ion-row>
 
