--- a/frontend/src/app/views/tabs/tabs.page.html
+++ b/frontend/src/app/views/tabs/tabs.page.html
@@ -7,13 +7,13 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="add"></ion-icon>
-      <ion-label>Add Tasky</ion-label>
+      <ion-icon name="checkmark-circle"></ion-icon>
+      <ion-label>Done</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="person"></ion-icon>
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
