--- a/frontend/src/app/views/tabs/tab2/tab2.page.html
+++ b/frontend/src/app/views/tabs/tab2/tab2.page.html
@@ -1,10 +1,53 @@
-<app-header title="Tab 2"></app-header>
+<app-header title="Completed Todos" class="text-center"></app-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-toolbar>
+    
+  </ion-toolbar>
 
+  <ion-card *ngFor="let item of todoList; let i = index" class="ion-margin">
+    <ion-card-header>
+      
+      <ion-card-subtitle [style.color]="item.fields.priority === 'high' ? 'red' : (item.fields.itemPriority === 'low' ? 'green' : 'orange')">
+        {{item.fields.category}}
+      </ion-card-subtitle>
+
+      <ion-item>
+        <ion-icon *ngIf="item.fields.priority === 'high'" color="danger" size="small" name="ellipse"></ion-icon>
+        <ion-icon *ngIf="item.fields.priority === 'low'" color="success" size="small" name="ellipse"></ion-icon>
+        <ion-icon *ngIf="item.fields.priority === 'middle'" color="warning" size="small" name="ellipse"></ion-icon>
+        <ion-label [style.text-decoration]="item.fields.done ? 'line-through' : 'none'"> &nbsp;{{ item.fields.name}}</ion-label>
+        <ion-button shape="round" color="dark" class="round">Open</ion-button>
+      </ion-item>
+
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-label>Due {{item.fields.due_date | date:'fullDate'}}</ion-label>
+    </ion-card-content>
+  </ion-card>
+
+  <div *ngIf="!todoList.length>0">
+    <ion-card *ngFor="let item of [1 ,2, 3 ,4]; let i = index" class="ion-margin">
+      <ion-card-header>
+        
+        <ion-card-subtitle [style.color]="item === 'high' ? 'red' : (item === 'low' ? 'green' : 'orange')">
+          <ion-skeleton-text animated>{{item}}</ion-skeleton-text>
+        </ion-card-subtitle>
+    
+        <ion-item>
+          <ion-skeleton-text animated>
+            <ion-icon *ngIf="item === 'high'" color="danger" size="small" name="ellipse"></ion-icon>
+            <ion-label [style.text-decoration]="item ? 'line-through' : 'none'"> &nbsp;{{ item}}</ion-label>
+            <ion-button shape="round" color="dark" class="round">Open</ion-button>
+          </ion-skeleton-text>
+        </ion-item>
+    
+      </ion-card-header>
+    
+      <ion-card-content>
+        <ion-label><ion-skeleton-text animated>Due </ion-skeleton-text></ion-label>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
