--- a/frontend/src/app/views/tabs/tab1/tab1.page.scss
+++ b/frontend/src/app/views/tabs/tab1/tab1.page.scss
@@ -20,3 +20,11 @@
 ion-icon {
   font-size: 20px; //Preferred size here
 }
+
+.no-data{
+  display: flex; 
+  justify-content: center; 
+  align-items: center ;
+  font-size: 40px;
+  color: darkolivegreen;
+}
