--- a/frontend/src/app/views/tabs/tab2/tab2.page.scss
+++ b/frontend/src/app/views/tabs/tab2/tab2.page.scss
@@ -19,3 +19,11 @@
      font-weight: 300;
     }
   }
+
+  .no-data{
+    display: flex; 
+    justify-content: center; 
+    align-items: center ;
+    font-size: 40px;
+    color: darkolivegreen;
+  }
