create service for manage data

--- a/frontend/src/app/views/tabs/tab1/tab1.page.html
+++ b/frontend/src/app/views/tabs/tab1/tab1.page.html
@@ -50,7 +50,7 @@
         <p class="custom-margin">Update</p>
       </ion-item>
 
-      <ion-item button (click)="presentConfirm(item)">
+      <ion-item button (click)="presentConfirm(item, i)">
         <ion-icon name="trash-outline"></ion-icon>
         <p class="custom-margin">Cancel</p>
       </ion-item>
