--- a/frontend/src/app/views/tabs/tab3/tab3.page.html
+++ b/frontend/src/app/views/tabs/tab3/tab3.page.html
@@ -1,11 +1,45 @@
-<app-header title="Tab 3"></app-header>
+<app-header title="Profile" class="text-center"></app-header>
 
+<ion-content fullscreen="true" slot="fixed" >
+    <div class="card">
+      <div class="header">
+        <div class="avatar">
+          <img src="../../../assets/images/avatar.png" alt="">
+        </div>
+      </div>
+      <div class="card-body">
+        <div class="user-meta ion-text-center">
+          <h3 class="playername">Shubham Jain</h3>
+          <h5 class="country">India</h5>
+          <h6 class="ranking">Current ranking: <ion-chip>
+              <ion-label>2</ion-label>
+            </ion-chip>
+          </h6>
+        </div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+        <ion-grid fixed class="border-bottom bg-white">
+          <ion-row class="ion-no-padding">
+            <ion-col size="4">
+              <div class="ion-text-center">
+                <span class="text-statics-big text-primary">1.5</span> <br>
+                <small>Total Todos</small>
+              </div>
+            </ion-col>
+            <ion-col size="4">
+              <div class="ion-text-center">
+                <span class="text-statics-big text-primary">10.5</span> <br>
+                <small>Total Starred</small>
+              </div>
+            </ion-col>
+            <ion-col size="4">
+              <div class="ion-text-center">
+                <span class="text-statics-big text-primary">1.3</span> <br>
+                <small>Total Completd</small>
+              </div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
 
+      </div>
+    </div>
 </ion-content>
