some modification in data sharing

--- a/frontend/src/app/views/tabs/tab3/tab3.page.html
+++ b/frontend/src/app/views/tabs/tab3/tab3.page.html
@@ -22,19 +22,19 @@
           <ion-row class="ion-no-padding">
             <ion-col size="4">
               <div class="ion-text-center">
-                <span class="text-statics-big text-primary">{{user_data.total_todos}}</span> <br>
+                <span class="text-statics-big text-primary">{{total_counts.total_todos}}</span> <br>
                 <small>Total Todos</small>
               </div>
             </ion-col>
             <ion-col size="4">
               <div class="ion-text-center">
-                <span class="text-statics-big text-primary">{{user_data.total_bookmark}}</span> <br>
+                <span class="text-statics-big text-primary">{{total_counts.total_bookmark}}</span> <br>
                 <small>Total Starred</small>
               </div>
             </ion-col>
             <ion-col size="4">
               <div class="ion-text-center">
-                <span class="text-statics-big text-primary">{{user_data.total_completed}}</span> <br>
+                <span class="text-statics-big text-primary">{{total_counts.total_completed_todos}}</span> <br>
                 <small>Total Completd</small>
               </div>
             </ion-col>
