new categories added functionality

--- a/frontend/src/app/views/add-new-task/add-new-task.page.html
+++ b/frontend/src/app/views/add-new-task/add-new-task.page.html
@@ -41,7 +41,7 @@
  
      <ion-chip color="primary" outline="true">
        <ion-label color="secondary">new</ion-label>
-       <ion-button fill="clear">
+       <ion-button fill="clear" (click)="new_category()">
          <ion-icon slot="icon-only" name="add-outline"></ion-icon>
        </ion-button>
      </ion-chip>
