working on undo todo and permanently delete todo functionality

--- a/frontend/src/app/views/trash/trash.page.html
+++ b/frontend/src/app/views/trash/trash.page.html
@@ -15,7 +15,7 @@
 
     <ion-row>
     
-      <ion-item button (click)="delete(item, i)">
+      <ion-item button (click)="presentConfirm(item, i)">
         <ion-icon name="trash-outline" color="danger"></ion-icon>
         <p class="custom-margin">Delete Forever</p>
       </ion-item>
