working on managing undo-todo in data sharing

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -6,5 +6,8 @@
       <ion-title color="tertiary">
           {{title}}
       </ion-title>
+      <ion-buttons slot="end">
+        <ion-back-button *ngIf="isBack" defaultHref="tabs"></ion-back-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
