--- a/frontend/src/app/views/tabs/tab2/tab2.page.html
+++ b/frontend/src/app/views/tabs/tab2/tab2.page.html
@@ -1,4 +1,4 @@
-<app-header title="Completed Todos" class="text-center"></app-header>
+<app-header title="Completed Todos" isBack="false" class="text-center"></app-header>
 
 <ion-content [fullscreen]="true">
   <ion-toolbar>
