--- a/frontend/src/app/views/tabs/tab3/tab3.page.html
+++ b/frontend/src/app/views/tabs/tab3/tab3.page.html
@@ -1,4 +1,4 @@
-<app-header title="Profile" class="text-center"></app-header>
+<app-header title="Profile" isBack="false" class="text-center"></app-header>
 
 <ion-content fullscreen="true" slot="fixed" >
     <div class="card">
