--- a/frontend/src/app/views/tabs/tab1/tab1.page.html
+++ b/frontend/src/app/views/tabs/tab1/tab1.page.html
@@ -1,4 +1,4 @@
-<app-header title="Home" class="text-center"></app-header>
+<app-header title="Home" isBack="false" class="text-center"></app-header>
 
 <ion-content [fullscreen]="true">
   <ion-toolbar>
