--- a/frontend/src/app/views/trash/trash.page.html
+++ b/frontend/src/app/views/trash/trash.page.html
@@ -1,4 +1,4 @@
-<app-header title="Trash" class="text-center"></app-header>
+<app-header title="Trash" isBack="true" class="text-center"></app-header>
 
 <ion-content fullscreen="true" slot="fixed">
 
