--- a/frontend/src/app/views/tabs/tab1/tab1.page.html
+++ b/frontend/src/app/views/tabs/tab1/tab1.page.html
@@ -5,7 +5,7 @@
     <ion-item lines="none" *ngIf="loader">
       <ion-label style="font-weight: 800;font-size: 3em;">
         Today
-        <p style="font-weight: 400;color: #433465 ;">{{today | date:'fullDate'}}</p>
+        <p style="font-weight: 400;color: #e416dd ;">{{today | date:'fullDate'}}</p>
       </ion-label>
     </ion-item>
 
