--- a/frontend/src/app/views/settings/settings.page.html
+++ b/frontend/src/app/views/settings/settings.page.html
@@ -22,9 +22,9 @@
     </ion-item>
     <ion-item detail lines="none">
       <ion-label>
-        Theme
+        Dark Theme
       </ion-label>
-      <ion-toggle slot="end" name="mode" color="success" [ngModel]="darkMode" (ionChange)="theme_mode()"></ion-toggle>
+      <ion-toggle slot="end" name="mode" color="success" [ngModel]="darkMode" (ionChange)="theme_mode($event)"></ion-toggle>
     </ion-item>
 
     <ion-list-header class="list-header-custom">
