--- a/frontend/src/app/views/settings/settings.page.html
+++ b/frontend/src/app/views/settings/settings.page.html
@@ -27,7 +27,7 @@
       <ion-toggle slot="end" name="mode" color="success" [ngModel]="darkMode" (ionChange)="theme_mode($event)"></ion-toggle>
     </ion-item>
 
-    <ion-list-header class="list-header-custom">
+    <!-- <ion-list-header class="list-header-custom">
       Preferences
     </ion-list-header>
     <ion-item detail>
@@ -60,7 +60,7 @@
       <ion-label>
         Secret conversations
       </ion-label>
-    </ion-item>
+    </ion-item> -->
     
   </ion-list>
 </ion-content>
