working on add reminder

--- a/frontend/src/app/views/reminder/reminder.page.html
+++ b/frontend/src/app/views/reminder/reminder.page.html
@@ -39,8 +39,8 @@
     </ion-row>
 
   </ion-card>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="loader">
-    <ion-fab-button color="secondary" (click)="addNewItem()">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="secondary" (click)="addNewReminder()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
