completed add reminder functionality

--- a/frontend/src/app/views/add-reminder/add-reminder.page.html
+++ b/frontend/src/app/views/add-reminder/add-reminder.page.html
@@ -13,7 +13,7 @@
    </ion-item>
 
     <ion-item>
-      <ion-textarea [(ngModel)]="itemName"  placeholder="Note"></ion-textarea>
+      <ion-textarea [(ngModel)]="itemNote"  placeholder="Note"></ion-textarea>
    </ion-item>
   
    <ion-item>
