--- a/frontend/src/app/views/reminder/reminder.page.html
+++ b/frontend/src/app/views/reminder/reminder.page.html
@@ -3,36 +3,36 @@
 <ion-content [fullscreen]="true">
 
 
-  <div *ngIf="todoList.length === 0">
+  <div *ngIf="all_reminders.length === 0">
     <p class="no-data">{{no_todo}}</p>
   </div>
   
-  <ion-card *ngFor="let item of todoList; let i = index" class="ion-margin">
+  <ion-card *ngFor="let item of all_reminders; let i = index" class="ion-margin">
     <ion-card-header>
       
       <ion-card-subtitle>
-        {{item}}
+        {{item.fields.title}}
       </ion-card-subtitle>
 
     </ion-card-header>
 
     <ion-card-content>
-      <ion-label><ion-icon name="alarm-outline"></ion-icon> {{item | date:'fullDate'}}</ion-label>
+      <ion-label><ion-icon name="alarm-outline"></ion-icon> {{item.fields.date_created | date:'fullDate'}}</ion-label>
     </ion-card-content>
 
     <ion-row>
     
-      <ion-item button (click)="update(item)">
+      <ion-item button (click)="update(item.id)">
         <ion-icon name="create-outline"></ion-icon>
         <p class="custom-margin">Update</p>
       </ion-item>
 
-      <ion-item button (click)="presentConfirm(item, i)">
+      <ion-item button (click)="presentConfirm(item.id, i)">
         <ion-icon name="trash-outline"></ion-icon>
         <p class="custom-margin">Cancel</p>
       </ion-item>
 
-      <ion-item button (click)="starred(item, item)">
+      <ion-item button (click)="starred(item.id, item)">
         <ion-icon name="star" [color]="item ? 'danger' : 'dark'"></ion-icon>
         <p class="custom-margin">Bookmark</p>
       </ion-item>
