working on reminder update

--- a/frontend/src/app/views/reminder/reminder.page.html
+++ b/frontend/src/app/views/reminder/reminder.page.html
@@ -22,7 +22,7 @@
 
     <ion-row>
     
-      <ion-item button (click)="update(item.id)">
+      <ion-item button (click)="update(item)">
         <ion-icon name="create-outline"></ion-icon>
         <p class="custom-margin">Update</p>
       </ion-item>
