completed reminder update and delete functionality

--- a/frontend/src/app/views/update-reminder/update-reminder.page.html
+++ b/frontend/src/app/views/update-reminder/update-reminder.page.html
@@ -28,7 +28,7 @@
     <ion-datetime [(ngModel)]="itemTime"  displayFormat="h:mm A"></ion-datetime>
   </ion-item>
 
-   <ion-button class="ion-margin" expand="block" (click)="update()">Add Reminder</ion-button>
+   <ion-button class="ion-margin" expand="block" (click)="update()">Edit Reminder</ion-button>
 
   </ion-card>
 
