--- a/frontend/src/app/views/reminder/reminder.page.html
+++ b/frontend/src/app/views/reminder/reminder.page.html
@@ -27,7 +27,7 @@
         <p class="custom-margin">Update</p>
       </ion-item>
 
-      <ion-item button (click)="presentConfirm(item.id, i)">
+      <ion-item button (click)="presentConfirm(item, i)">
         <ion-icon name="trash-outline"></ion-icon>
         <p class="custom-margin">Cancel</p>
       </ion-item>
