--- a/frontend/src/app/views/reminder/reminder.page.html
+++ b/frontend/src/app/views/reminder/reminder.page.html
@@ -32,8 +32,8 @@
         <p class="custom-margin">Cancel</p>
       </ion-item>
 
-      <ion-item button (click)="starred(item.id, item)">
-        <ion-icon name="star" [color]="item ? 'danger' : 'dark'"></ion-icon>
+      <ion-item button (click)="starred(item.fields.bookmark, item)">
+        <ion-icon name="star" [color]="item.fields.bookmark ? 'danger' : 'dark'"></ion-icon>
         <p class="custom-margin">Bookmark</p>
       </ion-item>
     </ion-row>
